--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "serverless-next.js": "^1.15.0-alpha.2",
